module2/.build/build-stage.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wg-ns
  labels:
    name: wg-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server
  namespace: wg-ns
spec:
  selector:
    matchLabels:
      app: simple-server
  replicas: 3
  template:
    metadata:
      annotation:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: simple-server
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: app
                  operator: In
                  values:
                    - simple-server
            topologyKey: kubernetes.io/hostname
      containers:
      - name: simple-server
        image: giuliao/module3-httpserver:v2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 700m
            memory: 200Mi
        lifecycle:
          preStop:
            exec:
              command: [ "/bin/sh","-c","while killall /bin/server; do sleep 1; done" ]
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
