module2/.build/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-server-yml
  namespace: wg-ns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: simple-server
