module2/.build/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  #   - hosts:
  #       - wggg.com
  rules:
    - host: wggg.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: simple-server-yml
                port:
                  number: 80
